Attempt fix nav gap

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -22,8 +22,12 @@
 }
 
 @media (min-width: 768px) {
-  #about, #portfolio, #contact {
-    width: 95%;
+  #about, #portfolio {
+    width: 90%;
+  }
+
+  #contact {
+    width: 50%
   }
 }
 
@@ -121,6 +125,7 @@ body {
 
 .navbar-collapse > ul {
   margin-top: 0;
+  margin-bottom: 0;
   border-bottom: 2px solid #111;
 }
 
@@ -129,6 +134,7 @@ body {
   bottom: 0;
   padding-top: 0;
   margin-top: 0;
+  margin-bottom: 0;
   width: 100%;
   height: 52px;
   font-variant: small-caps;
